  from Qt 5.11 to Qt 5.13, but `devtools://*` with Qt 5.14.
- Improvements when `tabs.tabs_are_windows` is set:
  * Using `:tab-take` and `:tab-give` now shows an error, as the effect of
    doing so would be equal to `:tab-clone`.
  * The `:buffer` completion doesn't show any window sections anymore, only a
    flat list of tabs.
- Performance improvements for the following areas:
  * Adding settings with URL patterns
  * Matching of settings using URL patterns

Fixed
~~~~~

- Downloads (e.g. via `:download`) now see the same user agent header as
  webpages, which fixes cases where overly restrictive servers/WAFs closed the
  connection before.
- dictcli.py now works correctly on Windows again.
- The logic for `:restart` has been revisited which should fix issues with
  relative basedirs.
- Remaining issues (mostly warnings) related to Python 3.8, especially for
  QtWebKit.
- Workaround for a Qt bug where a page never finishes loading with a
  non-overridable TLS error (e.g. due to HSTS).
- The `qute://configdiff` page now doesn't show built-in settings (e.g.
  javascript being enabled for `qute://` and `chrome://` pages) anymore.
- The `qute-lastpass` userscript now stops prompting for passwords when
  cancelling the password input.
- The tab hover text now shows ampersands (&) correctly.
- With QtWebEngine and Qt >= 5.11, the inspector now shows its icons correctly
  even if loading of images is disabled via the `content.images` setting.
- Various improvements for URL/searchengine detection:
  - Strings with a dot but with characters not allowed in a URL (e.g. an
    underscore) are now not treated as URL anymore.
  - Strings like "5/8" are now not treated as IP anymore.
  - URLs with an explicit scheme and a space (%20) are correctly treated as
    URLs.
  - Mail addresses are now treated as search terms.
  - With `url.open_base_url` set, searching for a search engine name now works.